--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.5.0-1": ["Fri Apr 28 2023", "Michael Jeronimo", "michael.jeronimo@openrobotics.org"], "1.4.1-2": ["Tue Mar 21 2023", "Michael Jeronimo", "michael.jeronimo@openrobotics.org"]}
+{"1.5.1-1": ["Thu May 11 2023", "Michael Jeronimo", "michael.jeronimo@openrobotics.org"], "1.5.0-1": ["Fri Apr 28 2023", "Michael Jeronimo", "michael.jeronimo@openrobotics.org"], "1.4.1-2": ["Tue Mar 21 2023", "Michael Jeronimo", "michael.jeronimo@openrobotics.org"]}
