--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rqt_graph
-	previous = 
-	base = 3818723f03e8
+	previous = 3818723f03e8
+	base = 8fcd24eb3caa
 	trim = 
 	trimbase = 
